Fix command label and queue defaults to default if not set

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,6 @@
 steps:
-  - name: ":console:"
+  - label: ":console:"
     command: "script.sh"
     parallelism: 5
     agents:
-      queue: $BUILDKITE_AGENT_META_DATA_QUEUE
+      queue: "${BUILDKITE_AGENT_META_DATA_QUEUE:-default}"
