--- a/.buildkite/template.yml
+++ b/.buildkite/template.yml
@@ -1,6 +1,9 @@
-# Used by the 'Add to Buildkite' button in the readme
 name: "Bash Parallel Example"
-description: "An parallel example repository you can use as a test project with Buildkite"
+description: "An example pipeline that runs a Bash script in parallel across multiple agents."
+emoji: ":bash:"
+color: "gray-100"
+languages:
+  - "Shell"
 steps:
   - command: "buildkite-agent pipeline upload"
     label: ":pipeline:"
