--- a/.buildkite/template.yml
+++ b/.buildkite/template.yml
@@ -3,6 +3,8 @@ description: "An example pipeline that runs a Bash script in parallel across mul
 emoji: ":bash:"
 languages:
   - "Shell"
+  - "Bash"
+  - "YAML"
 steps:
   - command: "buildkite-agent pipeline upload"
     label: ":pipeline:"
